<resources>
    <string name="app_name">CalculaThor</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="decimal">.</string>
    <string name="clear">C</string>
    <string name="equal">=</string>
    <string name ="chk">CHK</string>
    <string name="Del">Del</string>
    <string name="dial">As Fast As Lightening</string>
    <string name="equa">0</string>
    <string name="res">0</string>
</resources>