<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/thor">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="25sp"
        android:textAlignment="center"
        android:text="@string/dial"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FDD023"
         />

    <TextView
        android:id="@+id/equation"
        android:layout_width="397dp"
        android:layout_height="50dp"
        android:layout_margin="7dp"
        android:hint="@string/num0"
        android:maxLength="50"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="end"/>
    <EditText
        android:id="@+id/curr"
        android:layout_margin="7dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:textAlignment="textEnd"
        android:inputType="text"
        android:hint="@string/num0"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:maxLength="15"
        />
    <TextView
        android:id="@+id/result"
        android:layout_margin="7dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:textAlignment="textEnd"
        android:hint="@string/num0"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:maxLength="15"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="1">
        <Button
            android:id="@+id/num1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="0.25"
            android:textColor="#FF0000"
            android:text="@string/num1"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center_horizontal" />
        <Button
            android:id="@+id/num2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="0.25"
            android:textColor="#FF0000"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center_horizontal"
            android:text="@string/num2"/>

        <Button
            android:id="@+id/num3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="0.25"
            android:textColor="#FF0000"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center_horizontal"
            android:text="@string/num3"/>
        <Button
            android:id="@+id/add"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0.25"
            android:textColor="#FF0000"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center_horizontal"
            android:text="@string/add"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="1">
        <Button
            android:id="@+id/num4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="0.25"
            android:textColor="#FF0000"
            android:text="@string/num4"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:id="@+id/num5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="0.25"
            android:textColor="#FF0000"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center_horizontal"
            android:text="@string/num5"/>

        <Button
            android:id="@+id/num6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="0.25"
            android:textColor="#FF0000"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center_horizontal"
            android:text="@string/num6"/>
        <Button
            android:id="@+id/sub"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0.25"
            android:textColor="#FF0000"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center_horizontal"
            android:text="@string/subtract"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:weightSum="1">
        <Button
            android:id="@+id/num7"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="0.25"
            android:textColor="#FF0000"
            android:text="@string/num7"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:id="@+id/num8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="0.25"
            android:textColor="#FF0000"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center_horizontal"
            android:text="@string/num8"/>

        <Button
            android:id="@+id/num9"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="0.25"
            android:textColor="#FF0000"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center_horizontal"
            android:text="@string/num9"/>
        <Button
            android:id="@+id/mul"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0.25"
            android:textColor="#FF0000"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center_horizontal"
            android:text="@string/multiply"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:weightSum="1">
        <Button
            android:id="@+id/dec"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="0.25"
            android:textColor="#FF0000"
            android:text="@string/decimal"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:id="@+id/num0"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="0.25"
            android:textColor="#FF0000"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center_horizontal"
            android:text="@string/num0"/>
        <Button
            android:id="@+id/chk"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0.25"
            android:textColor="#FF0000"
            android:textSize="35sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center_horizontal"
            android:text="@string/chk"/>

        <Button
            android:id="@+id/div"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0.25"
            android:textColor="#FF0000"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center_horizontal"
            android:text="@string/divide"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="1">

        <Button
            android:id="@+id/clear"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="0.25"
            android:textColor="#FF0000"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center_horizontal"
            android:text="@string/clear"/>
        <Button
            android:id="@+id/del"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0.25"
            android:textColor="#FF0000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center_horizontal"
            android:text="@string/Del"/>

        <Button
            android:id="@+id/equal"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/mjolnir"/>


    </LinearLayout>
</LinearLayout>
</ScrollView>